# EquationsLib

./: .gitignore  LICENSE  README.md  THANKS.txt  pyproject.toml
g_equations/: __init__.py  np_handler.py
src/g_equations/: __init__.py  equs.py  np_handler.py
tests/: test.py
